--- a/index.html
+++ b/index.html
@@ -490,7 +490,6 @@ function submitForm() {
 
   const clone = form.cloneNode(true);
 
-  // Обработка динамически добавленных элементов
   const containers = [
     "elements-ca-u", "light-elements",
     "sinter-elements-ca-u",
@@ -517,13 +516,11 @@ function submitForm() {
     });
   });
 
-  // Отобразить активную секцию
   const visibleSection = clone.querySelector(`#section-${material}`);
   if (visibleSection) {
     visibleSection.style.display = "block";
   }
 
-  // Преобразовать inputs в текст
   clone.querySelectorAll("input, select, textarea").forEach(el => {
     const div = document.createElement("div");
     if (el.type === "checkbox") {
@@ -554,20 +551,18 @@ function submitForm() {
   tempContainer.appendChild(clone);
   document.body.appendChild(tempContainer);
 
-  html2pdf().set({
+  const opt = {
+    filename: 'oprosny_list.pdf',
     html2canvas: { scale: 2, useCORS: true },
     jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-  }).from(clone).output('datauristring')
-    .then(dataUri => {
-      pdfPreview.src = dataUri;
-      pdfPreview.style.display = "block";
-      return html2pdf().set({
-        filename: 'oprosny_list.pdf',
-        html2canvas: { scale: 2, useCORS: true },
-        jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-      }).from(clone).outputPdf('blob');
-    })
+  };
+
+  html2pdf().set(opt).from(clone).outputPdf('blob')
     .then(blob => {
+      // 1. Сохранить PDF локально
+      html2pdf().set(opt).from(clone).save();
+
+      // 2. Загрузить на tmpfiles и отправить по email
       document.body.removeChild(tempContainer);
       const file = new File([blob], "oprosny_list.pdf", { type: "application/pdf" });
       const formData = new FormData();
@@ -596,43 +591,12 @@ function submitForm() {
       };
       return emailjs.send("service_1rnpxea", "template_sk137ts", templateParams);
     })
-    .then(() => alert("Форма отправлена. Ссылка на PDF отправлена по email."))
+    .then(() => alert("PDF сохранён и отправлен по email."))
     .catch(err => {
       console.error("Ошибка при отправке:", err);
       alert("Ошибка: " + (err.message || err));
     });
 }
-
-
-  function addElementRow(containerId) {
-    const container = document.getElementById(containerId);
-    const wrapper = document.createElement("div");
-    wrapper.className = "element-row";
-
-    const inputElement = document.createElement("input");
-    inputElement.type = "text";
-    inputElement.placeholder = "Элемент (напр. Fe)";
-    inputElement.name = `${containerId}_element[]`;
-    inputElement.className = "form-control";
-
-    const inputRange = document.createElement("input");
-    inputRange.type = "text";
-    inputRange.placeholder = "Диапазон концентрации";
-    inputRange.name = `${containerId}_range[]`;
-    inputRange.className = "form-control";
-
-    const removeBtn = document.createElement("button");
-    removeBtn.type = "button";
-    removeBtn.className = "btn btn-outline-danger btn-sm";
-    removeBtn.textContent = "Удалить";
-    removeBtn.onclick = () => wrapper.remove();
-
-    wrapper.appendChild(inputElement);
-    wrapper.appendChild(inputRange);
-    wrapper.appendChild(removeBtn);
-    container.appendChild(wrapper);
-  }
-
   window.addElementRow = addElementRow;
 </script>
 
