--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ function restoreDynamicValues(containerId) {
 }
 
 // ВСТАВКА: автоматическое определение контейнеров и восстановление значений
-const containers = Array.from(document.querySelectorAll('div[id$="elements-ca-u"], div[id$="light-elements"]')).map(el => el.id);
+const containers = Array.from(document.querySelectorAll('div[id$="elements-ca-u"], div[id$="light-elements"], div[id$="sinter-elements-ca-u"], div[id$="multiplex-elements-ca-u"], div[id$="multiplex-light-elements"], div[id$="courier-elements-ca-u"], div[id$="courier-light-elements"]')).map(el => el.id);
 
 document.addEventListener("DOMContentLoaded", function () {
   emailjs.init("lK76KGFPVwTGiY9vX");
