--- a/index.html
+++ b/index.html
@@ -489,6 +489,31 @@ const containers = Array.from(document.querySelectorAll('div[id$="elements-ca-u"
     selectedSection.style.display = 'block';
   }
 }
+
+function bindPhotoPreview(materialType) {
+  const input = document.getElementById(`installation_photo_${materialType}`);
+  const preview = document.getElementById(`installation_preview_${materialType}`);
+
+  if (!input || !preview) return;
+
+  input.addEventListener("change", (event) => {
+    const file = event.target.files[0];
+    if (file && file.type.startsWith("image/")) {
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        preview.src = e.target.result;
+        preview.style.display = "block";
+        input.dataset.jpeg = e.target.result;
+      };
+      reader.readAsDataURL(file);
+    } else {
+      preview.style.display = "none";
+      preview.src = "";
+      input.dataset.jpeg = "";
+    }
+  });
+}
+
   
 document.addEventListener("DOMContentLoaded", function () {
   emailjs.init("lK76KGFPVwTGiY9vX");
