--- a/index.html
+++ b/index.html
@@ -575,16 +575,26 @@ if (visibleSection) {
 
 
   clone.querySelectorAll("input, select, textarea").forEach(el => {
-    const div = document.createElement("div");
-    if (el.type === "checkbox") {
-      div.textContent = el.checked ? "✔ Да" : "— Нет";
-    } else if (el.type === "file") {
-      div.textContent = "";
-    } else {
-      div.textContent = el.value || "—";
-    }
-    el.replaceWith(div);
-  });
+  const div = document.createElement("div");
+  div.style.padding = "6px 12px";
+  div.style.border = "1px solid #ccc";
+  div.style.borderRadius = "4px";
+  div.style.minHeight = "38px";
+  div.style.marginBottom = "8px";
+  div.style.backgroundColor = "#f8f8f8";
+  div.style.fontSize = "14px";
+
+  if (el.type === "checkbox") {
+    div.textContent = el.checked ? "✔ Да" : "— Нет";
+  } else if (el.type === "file") {
+    div.textContent = "";
+  } else {
+    div.textContent = el.value?.trim() || "—";
+  }
+
+  el.replaceWith(div);
+});
+
 
   clone.querySelectorAll("button").forEach(btn => btn.remove());
 
