--- a/index.html
+++ b/index.html
@@ -609,16 +609,22 @@ if (visibleSection) {
   }
 
   const tempContainer = document.createElement("div");
-  tempContainer.style.position = "fixed";
-  tempContainer.style.top = "-9999px";
+  tempContainer.style.position = "absolute";
+tempContainer.style.left = "-9999px";
+tempContainer.style.top = "0";
   tempContainer.appendChild(clone);
+  clone.style.margin = "0";
+clone.style.padding = "0";
+clone.style.width = "100%";
+clone.style.boxSizing = "border-box";
   document.body.appendChild(tempContainer);
 
-  const opt = {
-    filename: 'oprosny_list.pdf',
-    html2canvas: { scale: 2, useCORS: true },
-    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-  };
+const opt = {
+  filename: 'oprosny_list.pdf',
+  html2canvas: { scale: 2, useCORS: true },
+  jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' },
+  pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
+};
 
   html2pdf().set(opt).from(clone).outputPdf('blob')
     .then(blob => {
