--- a/index.html
+++ b/index.html
@@ -540,22 +540,35 @@ function submitForm() {
   const form = document.getElementById("form");
   const email = form.email.value;
   const material = form.material.value;
-
   if (!email) return alert("Введите email");
 
-  // Клонируем форму
-  const clone = document.createElement("div");
-  const content = form.querySelector("#pdf-content").cloneNode(true);
-  clone.appendChild(content);
+  // Подготавливаем контейнер для PDF (используем только #pdf-content)
+  const contentToExport = document.getElementById("pdf-content").cloneNode(true);
 
-  // Стили контейнера
-  clone.style.margin = "0";
-  clone.style.padding = "0";
-  clone.style.width = "100%";
-  clone.style.boxSizing = "border-box";
+  // Показываем только выбранный блок анализа
+  contentToExport.querySelectorAll(".analyzer-section").forEach(section => {
+    section.style.display = "none";
+  });
+  const selectedSection = contentToExport.querySelector(`#section-${material}`);
+  if (selectedSection) selectedSection.style.display = "block";
 
-  // Обработка input/select/textarea
-  clone.querySelectorAll("input, select, textarea").forEach(el => {
+  // Обновляем динамические данные
+  containers.forEach(id => {
+    saveDynamicValues(id);
+    const original = document.getElementById(id);
+    const cloned = contentToExport.querySelector(`#${id}`);
+    if (!original || !cloned) return;
+    cloned.innerHTML = "";
+    dynamicElementData[id].forEach(entry => {
+      const div = document.createElement("div");
+      div.textContent = `${entry.element || "—"} — ${entry.range || "—"}`;
+      div.style.marginBottom = "4px";
+      cloned.appendChild(div);
+    });
+  });
+
+  // Заменяем поля ввода на стилизованный текст
+  contentToExport.querySelectorAll("input, select, textarea").forEach(el => {
     const div = document.createElement("div");
     div.style.padding = "4px 8px";
     div.style.border = "1px solid #ccc";
@@ -564,49 +577,18 @@ function submitForm() {
     div.style.marginBottom = "4px";
     div.style.backgroundColor = "#f9f9f9";
     div.style.fontSize = "13px";
-
     if (el.type === "checkbox") {
       div.textContent = el.checked ? "✔ Да" : "— Нет";
-    } else if (el.type === "file") {
-      div.textContent = "";
     } else {
       div.textContent = el.value?.trim() || "—";
     }
-
     el.replaceWith(div);
   });
 
-  // Обновляем динамические значения
-  containers.forEach(id => {
-    saveDynamicValues(id);
-    const original = document.getElementById(id);
-    const cloneContainer = clone.querySelector(`#${id}`);
-    if (!original || !cloneContainer) return;
+  // Удаляем кнопки
+  contentToExport.querySelectorAll("button").forEach(btn => btn.remove());
 
-    cloneContainer.innerHTML = "";
-    dynamicElementData[id].forEach(entry => {
-      const div = document.createElement("div");
-      div.textContent = `${entry.element || "—"} — ${entry.range || "—"}`;
-      div.style.marginBottom = "4px";
-      cloneContainer.appendChild(div);
-    });
-  });
-
-  // Показать только выбранную секцию
-  const allSections = clone.querySelectorAll(".analyzer-section");
-  allSections.forEach(section => {
-    section.style.display = "none";
-  });
-
-  const visibleSection = clone.querySelector(`#section-${material}`);
-  if (visibleSection) {
-    visibleSection.style.display = "block";
-  }
-
-  // Удаляем все кнопки
-  clone.querySelectorAll("button").forEach(btn => btn.remove());
-
-  // Вставка изображения
+  // Добавляем изображение если есть
   const photoInput = document.getElementById(`installation_photo_${material}`);
   const jpegData = photoInput?.dataset?.jpeg;
   if (jpegData) {
@@ -614,18 +596,20 @@ function submitForm() {
     img.src = jpegData;
     img.style.maxWidth = "100%";
     img.style.marginTop = "10px";
-    clone.appendChild(img);
+    contentToExport.appendChild(img);
   }
 
-  // Вставляем во временную обёртку
-  const wrapper = document.createElement("div");
-  wrapper.style.position = "absolute";
-  wrapper.style.left = "-9999px";
-  wrapper.style.top = "0";
-  wrapper.appendChild(clone);
-  document.body.appendChild(wrapper);
+  // Обертка вне экрана для печати
+  const tempContainer = document.createElement("div");
+  tempContainer.style.position = "fixed";
+  tempContainer.style.left = "0";
+  tempContainer.style.top = "0";
+  tempContainer.style.opacity = "0";
+  tempContainer.style.pointerEvents = "none";
+  tempContainer.style.zIndex = "-1";
+  tempContainer.appendChild(contentToExport);
+  document.body.appendChild(tempContainer);
 
-  // Генерация PDF
   const opt = {
     filename: 'oprosny_list.pdf',
     html2canvas: { scale: 2, useCORS: true },
@@ -633,10 +617,10 @@ function submitForm() {
     pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
   };
 
-  html2pdf().set(opt).from(clone).outputPdf('blob')
+  html2pdf().set(opt).from(contentToExport).outputPdf('blob')
     .then(blob => {
-      html2pdf().set(opt).from(clone).save();
-      document.body.removeChild(wrapper);
+      html2pdf().set(opt).from(contentToExport).save();
+      document.body.removeChild(tempContainer);
 
       const file = new File([blob], "oprosny_list.pdf", { type: "application/pdf" });
       const formData = new FormData();
