--- a/index.html
+++ b/index.html
@@ -542,36 +542,32 @@ function submitForm() {
   const material = form.material.value;
   if (!email) return alert("Введите email");
 
-  // Создаем клон только контента, без формы
-  const originalContent = document.getElementById("pdf-content");
-  const clone = originalContent.cloneNode(true);
+  // --- Клонируем только видимый контент ---
+  const source = document.getElementById("pdf-content");
+  const clone = source.cloneNode(true);
 
-  // Показываем только активную секцию материала
+  // --- Показываем только нужную секцию материала ---
   clone.querySelectorAll(".analyzer-section").forEach(section => {
     section.style.display = "none";
   });
-  const selected = clone.querySelector(`#section-${material}`);
-  if (selected) {
-    selected.style.display = "block";
-    selected.classList.remove("analyzer-section"); // важно, чтобы display: none не применялся
-  }
+  const activeSection = clone.querySelector(`#section-${material}`);
+  if (activeSection) activeSection.style.display = "block";
 
-  // Обновляем динамические блоки
+  // --- Обновляем значения динамических блоков ---
   containers.forEach(id => {
     saveDynamicValues(id);
-    const originalBlock = document.getElementById(id);
-    const cloneBlock = clone.querySelector(`#${id}`);
-    if (!originalBlock || !cloneBlock) return;
-    cloneBlock.innerHTML = "";
+    const cloned = clone.querySelector(`#${id}`);
+    if (!cloned) return;
+    cloned.innerHTML = "";
     dynamicElementData[id].forEach(entry => {
       const div = document.createElement("div");
       div.textContent = `${entry.element || "—"} — ${entry.range || "—"}`;
       div.style.marginBottom = "4px";
-      cloneBlock.appendChild(div);
+      cloned.appendChild(div);
     });
   });
 
-  // Заменяем все input/select/textarea на текст
+  // --- Заменяем все inputs/textarea/select на текст ---
   clone.querySelectorAll("input, select, textarea").forEach(el => {
     const div = document.createElement("div");
     div.style.padding = "4px 8px";
@@ -585,10 +581,10 @@ function submitForm() {
     el.replaceWith(div);
   });
 
-  // Удаляем кнопки
+  // --- Удаляем кнопки ---
   clone.querySelectorAll("button").forEach(btn => btn.remove());
 
-  // Добавляем фото если есть
+  // --- Вставляем фото при наличии ---
   const photoInput = document.getElementById(`installation_photo_${material}`);
   const jpegData = photoInput?.dataset?.jpeg;
   if (jpegData) {
@@ -599,12 +595,21 @@ function submitForm() {
     clone.appendChild(img);
   }
 
-  // Создаем обертку без создания пустой страницы
-  const hiddenWrapper = document.createElement("div");
-  hiddenWrapper.style.cssText = "position: absolute; top: 0; left: 0; visibility: hidden; z-index: -1;";
-  hiddenWrapper.appendChild(clone);
-  document.body.appendChild(hiddenWrapper);
+  // --- Обертка без отображения ---
+  const wrapper = document.createElement("div");
+  wrapper.style.position = "absolute";
+  wrapper.style.top = "0";
+  wrapper.style.left = "0";
+  wrapper.style.width = "210mm"; // точная ширина A4
+  wrapper.style.padding = "20px";
+  wrapper.style.background = "#fff";
+  wrapper.style.visibility = "hidden";
+  wrapper.style.zIndex = "-1";
 
+  wrapper.appendChild(clone);
+  document.body.appendChild(wrapper);
+
+  // --- Параметры PDF ---
   const opt = {
     filename: 'oprosny_list.pdf',
     html2canvas: { scale: 2, useCORS: true },
@@ -612,10 +617,10 @@ function submitForm() {
     pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
   };
 
-  html2pdf().set(opt).from(clone).outputPdf('blob')
+  html2pdf().set(opt).from(wrapper).outputPdf('blob')
     .then(blob => {
-      html2pdf().set(opt).from(clone).save();
-      document.body.removeChild(hiddenWrapper);
+      html2pdf().set(opt).from(wrapper).save();
+      document.body.removeChild(wrapper);
 
       const file = new File([blob], "oprosny_list.pdf", { type: "application/pdf" });
       const formData = new FormData();
