--- a/index.html
+++ b/index.html
@@ -542,32 +542,33 @@ function submitForm() {
   const material = form.material.value;
   if (!email) return alert("Введите email");
 
-  // --- Клонируем только видимый контент ---
-  const source = document.getElementById("pdf-content");
-  const clone = source.cloneNode(true);
+  // Создаем клон только контента, без формы
+  const originalContent = document.getElementById("pdf-content");
+  const clone = originalContent.cloneNode(true);
 
-  // --- Показываем только нужную секцию материала ---
+  // Показываем только активную секцию материала
   clone.querySelectorAll(".analyzer-section").forEach(section => {
     section.style.display = "none";
   });
-  const activeSection = clone.querySelector(`#section-${material}`);
-  if (activeSection) activeSection.style.display = "block";
+  const selected = clone.querySelector(`#section-${material}`);
+  if (selected) selected.style.display = "block";
 
-  // --- Обновляем значения динамических блоков ---
+  // Обновляем динамические блоки
   containers.forEach(id => {
     saveDynamicValues(id);
-    const cloned = clone.querySelector(`#${id}`);
-    if (!cloned) return;
-    cloned.innerHTML = "";
+    const originalBlock = document.getElementById(id);
+    const cloneBlock = clone.querySelector(`#${id}`);
+    if (!originalBlock || !cloneBlock) return;
+    cloneBlock.innerHTML = "";
     dynamicElementData[id].forEach(entry => {
       const div = document.createElement("div");
       div.textContent = `${entry.element || "—"} — ${entry.range || "—"}`;
       div.style.marginBottom = "4px";
-      cloned.appendChild(div);
+      cloneBlock.appendChild(div);
     });
   });
 
-  // --- Заменяем все inputs/textarea/select на текст ---
+  // Заменяем все input/select/textarea на текст
   clone.querySelectorAll("input, select, textarea").forEach(el => {
     const div = document.createElement("div");
     div.style.padding = "4px 8px";
@@ -581,10 +582,10 @@ function submitForm() {
     el.replaceWith(div);
   });
 
-  // --- Удаляем кнопки ---
+  // Удаляем кнопки
   clone.querySelectorAll("button").forEach(btn => btn.remove());
 
-  // --- Вставляем фото при наличии ---
+  // Добавляем фото если есть
   const photoInput = document.getElementById(`installation_photo_${material}`);
   const jpegData = photoInput?.dataset?.jpeg;
   if (jpegData) {
@@ -595,21 +596,12 @@ function submitForm() {
     clone.appendChild(img);
   }
 
-  // --- Обертка без отображения ---
-  const wrapper = document.createElement("div");
-  wrapper.style.position = "absolute";
-  wrapper.style.top = "0";
-  wrapper.style.left = "0";
-  wrapper.style.width = "210mm"; // точная ширина A4
-  wrapper.style.padding = "20px";
-  wrapper.style.background = "#fff";
-  wrapper.style.visibility = "hidden";
-  wrapper.style.zIndex = "-1";
+  // Создаем обертку без создания пустой страницы
+  const hiddenWrapper = document.createElement("div");
+  hiddenWrapper.style.cssText = "position: absolute; top: 0; left: 0; width: 210mm; background: #fff; padding: 10px; visibility: hidden; z-index: -1; overflow: hidden";
+  hiddenWrapper.appendChild(clone);
+  document.body.appendChild(hiddenWrapper);
 
-  wrapper.appendChild(clone);
-  document.body.appendChild(wrapper);
-
-  // --- Параметры PDF ---
   const opt = {
     filename: 'oprosny_list.pdf',
     html2canvas: { scale: 2, useCORS: true },
@@ -617,10 +609,10 @@ function submitForm() {
     pagebreak: { mode: ['avoid-all', 'css', 'legacy'] }
   };
 
-  html2pdf().set(opt).from(wrapper).outputPdf('blob')
+  html2pdf().set(opt).from(hiddenWrapper).outputPdf('blob')
     .then(blob => {
-      html2pdf().set(opt).from(wrapper).save();
-      document.body.removeChild(wrapper);
+      html2pdf().set(opt).from(hiddenWrapper).save();
+      document.body.removeChild(hiddenWrapper);
 
       const file = new File([blob], "oprosny_list.pdf", { type: "application/pdf" });
       const formData = new FormData();
@@ -654,7 +646,6 @@ function submitForm() {
       alert("Ошибка: " + (err.message || err));
     });
 }
-
 
 
 function addElementRow(containerId) {
